# HydraMarket-Contract

./: Anchor.toml  Cargo.toml  README.md
programs/escrow-vault/: Cargo.toml
programs/escrow-vault/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/escrow-vault/src/instructions/: claim_payout.rs  initialize_vault.rs  mint_pairs.rs  mod.rs  pause_minting.rs  resume_minting.rs  settle.rs
programs/escrow-vault/src/utils/: invariants.rs  mod.rs
programs/market-registry/: Cargo.toml
programs/market-registry/src/: constants.rs  error.rs  event.rs  lib.rs  state.rs
programs/market-registry/src/instruction/: cancel_market.rs  finalize_market.rs  initialize_market.rs  mod.rs  open_market.rs  pause_market.rs  resume_market.rs
programs/market-registry/src/instructions/: assert_market_expired.rs  assert_market_open.rs  assert_market_resolved.rs  cancel_market.rs  emergency_finalize_market.rs  finalize_market.rs  initialize_market.rs  mod.rs  open_market.rs  pause_market.rs  resolving_market.rs  resume_market.rs  update_market_metadata.rs
programs/resolution-adapter/: Cargo.toml
programs/resolution-adapter/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/resolution-adapter/src/instruction/: initialize_resolution.rs  mod.rs  propose_crypto_outcome.rs  propose_sports_outcome.rs
programs/resolution-adapter/src/instructions/: dispute_proposal.rs  emergency_resolve.rs  finalize_outcome.rs  initialize_resolution.rs  mod.rs  propose_crypto_outcome.rs  propose_sports_outcome.rs
programs/resolution-adapter/src/utils/: crypto_oracle.rs  mod.rs  sports_oracle.rs
tests/: escrow-vault.test.ts  hydra-market-contract.ts  integration-test.test.ts  market-registry-contract.test.ts  resolution-adapter.test.ts
