[workspace]
resolver = "2"
members = [
  "programs/market-registry",
  "programs/escrow-vault",
  "programs/resolution-adapter"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
