[package]
name = "escrow-vault"
version = "0.1.0"
description = "HydraMarket Escrow Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"