[package]
name = "market-registry"
version = "0.1.0"
description = "HydraMarket Market Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_registry"


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
anchor-debug = []

idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
borsh = "0.10.3"
borsh-derive = "0.10.3"