[package]
name = "resolution-adapter"
version = "0.1.0"
description = "HydraMarket Resolution Adapter"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resolution_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
pyth-solana-receiver-sdk = "1.1.0"
market-registry = { path = "../market-registry", features = ["cpi"] }